Complete series three of the Youtube series completing the MVC pattern.

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="GuessingGameJspVersion">
+    <wb-module deploy-name="GuessingGameMvcVersion">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="GuessingGameJspVersion"/>
-        <property name="java-output-path" value="/GuessingGameJspVersion/build/classes"/>
+        <property name="context-root" value="GuessingGameMvcVersion"/>
+        <property name="java-output-path" value="/GuessingGameMvcVersion/build/classes"/>
     </wb-module>
 </project-modules>
